2.0.11
======
- Add "getFragmentSpec()" / "setFragmentSpec(IFragmentSpec)" methods to ThymeleafViewResolver and
  ThymeleafView in order to allow the processing of "partial" views (only the template fragments
  selected by the IFragmentSpec will be processed and rendered).
- Add AJAX-enabled AjaxThymeleafViewResolver, making use of an AjaxHandler instance from Spring JS
  (part of Spring Webflow).


2.0.10
======
- (No changes)


2.0.9
=====
- Added RequestContext variable to Model as AbstractTemplateView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE
  besides thymeleaf's own SpringContextVariableNames.SPRING_REQUEST_CONTEXT for better compatibility
  with other view-layer technologies.
- Added an HttpServletResponse parameter to SpringWebContext constructors in order to be able to access
  response from processors.
- Refactored SpringEL expression evaluation.
- Added "viewClass" property to ThymeleafViewResolver.


2.0.8
=====
- (No changes)


2.0.7
=====
- (No changes)


2.0.6
=====
- (No changes)


2.0.5
=====
- Modified ViewResolver so that view beans are only configured using an existing bean as prototype
  if this bean is of type ThymeleafView.
- Made ThymeleafView return the default content type in getContentType() even if setContentType()
  has not been called before. This allows compatibility with the ContentNegotiatingViewResolver
  view resolver appeared in Spring 3.0.
- Improved javadoc for ThymeleafViewResolver and ThymeleafView.


2.0.4
=====
- (No changes)


2.0.3
=====
- Modified behaviour of th:method in <form> tags so that it controls whether the selected method
  is supported by browsers (get, post) or not. If not, it creates a hidden input field inside the
  form (named '_method') with the original value and sets the method to 'post'. This mirrors the
  behaviour of Spring's FormTag class (Spring taglib's "<form:form>" tag).
- Added "excludedViewNames" property to ThymeleafViewResolver so that a set of patterns of views